--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@types/styled-components": "^5.1.34",
     "expo": "~52.0.37",
+    "expo-constants": "~17.0.7",
+    "expo-device": "~7.0.2",
+    "expo-notifications": "~0.29.13",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
